# ws2tcp-local-qt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  release.yml  windows-x64.yml
cmake/: CPackOptions.cmake  SignMacOS.cmake.in
data/: ws2tcp-local-qt.desktop
helper/: MacProxyHelper.cpp  com.uglykitty.ws2tcp-local.proxy-helper.plist
src/: MacPrivilegedHelperClient.h  MacPrivilegedHelperClient.mm  MacSystemProxy.cpp  MacSystemProxy.h  MainWindow.cpp  MainWindow.h  SystemProxy.h  WindowsSystemProxy.cpp  WindowsSystemProxy.h  main.cpp  resources.qrc
src/resources/: app-icon.icns  app.rc
